Logseq auto save

--- a/journals/2020_10_04.md
+++ b/journals/2020_10_04.md
@@ -2,8 +2,9 @@
 title: Oct 4th, 2020
 ---
 
-## [[2020-10-05]]
 ## Veeco
-## a
+###
+### prep for interview with David Ogilvie
+### Mon 8a [[2020-10-05]]
 ##
 ##
