--- a/journals/2020_10_04.md
+++ b/journals/2020_10_04.md
@@ -5,6 +5,7 @@ title: Oct 4th, 2020
 ## Veeco
 ###
 ### prep for interview with David Ogilvie
-### Mon 8a [[2020-10-05]]
+### Mon 8a [[2020-10-05]](Monday Oct 5th)
+## Logseq is a Roam clone
 ##
 ##
