Logseq auto save

--- a/journals/2020_10_04.md
+++ b/journals/2020_10_04.md
@@ -5,7 +5,7 @@ title: Oct 4th, 2020
 ## Veeco
 ###
 ### prep for interview with David Ogilvie
-### Mon 8a [2020-10-05]([[Monday Oct 5th]])
+### Mon 8a [Monday Oct 5th]([[2020-10-05]])
 ## Logseq is a Roam clone
 ##
 ##
