Logseq auto save

--- a/journals/2020_10_04.md
+++ b/journals/2020_10_04.md
@@ -5,7 +5,8 @@ title: Oct 4th, 2020
 ## Veeco
 ###
 ### prep for interview with David Ogilvie
-### Mon 8a [Monday Oct 5th]([[2020-10-05]])
+### Mon 8a [[Oct 5th, 2020]]
+###
 ## Logseq is a Roam clone
 ##
 ##
