Logseq auto save

--- a/journals/2020_10_04.md
+++ b/journals/2020_10_04.md
@@ -2,11 +2,10 @@
 title: Oct 4th, 2020
 ---
 
-## Veeco
-###
-### prep for interview with David Ogilvie
-### Mon 8a [[Oct 5th, 2020]]
-###
+## [[Veeco]] - prep for interview with David Ogilvie [tomorrow]([[Oct 5th, 2020]]) 8a
 ## Logseq is a Roam clone
+##
+##
+##
 ##
 ##
