Logseq auto save

--- a/journals/2020_10_04.md
+++ b/journals/2020_10_04.md
@@ -3,7 +3,7 @@ title: Oct 4th, 2020
 ---
 
 ## [[Veeco]] - prep for interview with David Ogilvie [tomorrow]([[Oct 5th, 2020]]) 8a
-## Logseq is a Roam clone
+## [[Logseq]] is
 ##
 ##
 ##
