Logseq auto save

--- a/journals/2020_10_04.md
+++ b/journals/2020_10_04.md
@@ -2,8 +2,8 @@
 title: Oct 4th, 2020
 ---
 
+## started using [[Logseq]]
 ## [[Veeco]] - prep for interview with David Ogilvie [tomorrow]([[Oct 5th, 2020]]) 8a
-## [[Logseq]] is
 ##
 ##
 ##
