Logseq auto save

--- a/journals/2020_10_07.md
+++ b/journals/2020_10_07.md
@@ -2,6 +2,12 @@
 title: Oct 7th, 2020
 ---
 
+## do I want to use this for notes?
+## but at least it has bullets
+## it's local, but editing is buggie -- especially bullets
+## and it's markdown, so my data is my data and it's portable
+## copy/paste is bit funky
+## I can't jeopardize this job opportunity by using something in the cloud
 ##
 ##
 ##
