--- a/journals/2020_10_07.md
+++ b/journals/2020_10_07.md
@@ -9,6 +9,6 @@ title: Oct 7th, 2020
 ## copy/paste is bit funky
 ## I can't jeopardize this job opportunity by using something in the cloud
 ##
-##
+## SCOTT
 ##
 ##
