Logseq auto save

--- a/journals/2020_10_07.md
+++ b/journals/2020_10_07.md
@@ -2,7 +2,18 @@
 title: Oct 7th, 2020
 ---
 
+## which note app will I use for Veeco?
 ## do I want to use this for notes?
+## but at least it has bullets
+## it's local, but editing is buggie -- especially bullets
+## and it's markdown, so my data is my data and it's portable
+## copy/paste is bit funky
+### I can't jeopardize this job opportunity by using something in the cloud
+### copy/paste is bit funky
+### and it's markdown, so my data is my data and it's portable
+### it's local, but editing is buggie -- especially bullets
+### but at least it has bullets
+### do I want to use this for notes?
 ## but at least it has bullets
 ## it's local, but editing is buggie -- especially bullets
 ## and it's markdown, so my data is my data and it's portable
@@ -10,7 +21,8 @@ title: Oct 7th, 2020
 ## I can't jeopardize this job opportunity by using something in the cloud
 ##
 ## [[Solomon Page]] onboarding
-##
+### 2p - 240p
+### 330p - x
 ##
 ##
 ##
