Logseq auto save

--- a/journals/2020_10_07.md
+++ b/journals/2020_10_07.md
@@ -22,6 +22,12 @@ title: Oct 7th, 2020
 ## [[Solomon Page]] onboarding
 ### 2p - 240p
 ### 330p - x
+## CA UEI - fill out form, take to PO
+## **LEAVE** - Post Office, Maranatha
+## NVC - register for events
+### https://mail.google.com/mail/u/0/#inbox/FMfcgxwJZJbskSMxfrkFcMgRrvhhlqzg
+##
+##
 ##
 ##
 ##
