Logseq auto save

--- a/journals/2020_10_07.md
+++ b/journals/2020_10_07.md
@@ -26,17 +26,22 @@ title: Oct 7th, 2020
 ## **LEAVE** - Post Office, Maranatha
 ## NVC - register for events
 ### https://mail.google.com/mail/u/0/#inbox/FMfcgxwJZJbskSMxfrkFcMgRrvhhlqzg
-##
+## Perspecta - laptop
+### Mark Roehr
+### Scott Vu - status
 ## assemble backdrop for Zoom meetings
 ## [[move notes into Logseq]]
 ### move notes from Roam
 #### export from Roam
 #### import into Logseq
+#### export from Roam
+#### import into Logseq
 ### move notes from Workflowy
 #### export from Workflowy
 #### import (paste?) into Logseq
-## paint my room
-## learn Adobe Illustrator
+## [[paint my room]]
+## [[learn Adobe Illustrator]]
+##
 ##
 ##
 ##
