--- a/journals/2020_10_10.md
+++ b/journals/2020_10_10.md
@@ -4,11 +4,13 @@ title: Oct 10th, 2020
 
 ## ^^|---Friday---|^^
 ## Palomar Health - drug screen (bring paper)
-## Hays time card - Drafts (laptop)
 ## FedEx delivery
 ### paper note - if no answer, call me at 760-215-2326
 ### Warren, Josh
+## Hays time card - Drafts (laptop)
+## ^^630p^^ The Grand
 ## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+##
 ##
 ##
 ##
