--- a/journals/2020_10_09.md
+++ b/journals/2020_10_09.md
@@ -4,10 +4,11 @@ title: Oct 9th, 2020
 
 ## ^^|---Thursday---|^^
 ## walk
+## eat
 ## print errands
 ## ERRANDS
 ##
 ##
-##
+## [[get a REAL ID]]
 ##
 ##
