--- a/journals/2020_10_10.md
+++ b/journals/2020_10_10.md
@@ -5,14 +5,18 @@ title: Oct 10th, 2020
 ## ^^|---Friday---|^^
 ## Palomar Health - drug screen (bring paper)
 ## FedEx delivery
-### paper note - if no answer, call me at 760-215-2326
-### Warren, Josh
+### text Warren - can I get Josh's phone number?
+### print a paper note
+#### If no answer, I'm upstairs. Call 760-215-2326
+#### I authorize you to leave the document on the front porch (maybe the table?), but if you need a signature, I understand
+#### I authorize the landlord, Warren Wade, or his son, Josh Wade, to sign for it.
+### text Josh
 ## Hays time card - Drafts (laptop)
 ## ^^630p^^ The Grand
 ## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ##
 ##
-##
+## next week: NVC - re-register Bonnie for Sunday church?
 ##
 ##
 ##
