Logseq auto save

--- a/journals/2020_10_09.md
+++ b/journals/2020_10_09.md
@@ -7,8 +7,7 @@ title: Oct 9th, 2020
 ## eat
 ## print errands
 ## ERRANDS
-##
-##
-## [[get a REAL ID]]
+## file the notes that are in .txt
+## [[Projects]]
 ##
 ##
